TEST: use the orfeotoolbox_test for the postGIS tests

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -783,15 +783,17 @@ otbPostGISConnectionImplementationNew
 ADD_TEST(coTvPostGISConnectionImplementationConnectToDB ${COMMON_TESTS10}
         otbPostGISConnectionImplementationConnectToDB
         localhost
-	testgis
-	postgres
+        orfeotoolbox_test
+        orfeotoolbox_test_user
+        Bidfeud0
 )
 
 ADD_TEST(coTvPostGISConnectionImplementationPerformTransaction ${COMMON_TESTS10}
         otbPostGISConnectionImplementationPerformTransaction
         localhost
-	testgis
-	postgres
+        orfeotoolbox_test
+        orfeotoolbox_test_user
+        Bidfeud0
 )
 
 
