ENH : change multibaseline for ignore line

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -586,6 +586,7 @@ ADD_TEST(coTvVectorData ${COMMON_TESTS7}
       --compare-ascii ${EPSILON_3}
             ${BASELINE_FILES}/coTvVectorData.txt
             ${TEMP}/coTvVectorData.txt
+            --ignore-lines-with 1 RTTI
      otbVectorData
        ${TEMP}/coTvVectorData.txt
 )
