ENh: Ossman Code, adding water index functor, filter and sqrtSpectralAngleFunctor and testings

--- a/Testing/Code/FeatureExtraction/CMakeLists.txt
+++ b/Testing/Code/FeatureExtraction/CMakeLists.txt
@@ -1754,6 +1754,17 @@ ADD_TEST(feTvImageToLineSegmentVectorData ${FEATUREEXTRACTION_TESTS15}
       ${TEMP}/feTvImageToLineSegmentVectorData.kml
 )
 
+# -------            otb::SqrtSpectralAngleImageFilter (Ossman)------------------------------
+ADD_TEST(feTvSqrtSpectralAngleImageFilter ${FEATUREEXTRACTION_TESTS15}
+ --compare-image ${EPSILON_8}   ${BASELINE}/feSqrtSpectralAngle.tif
+                   ${TEMP}/feSqrtSpectralAngle.tif
+        otbSqrtSpectralAngleImageFilter
+        ${INPUTDATA}/qb_RoadExtract2sub200x200.tif
+        ${TEMP}/feSqrtSpectralAngle.tif
+        185 270 150 619 #reference pixel
+)
+
+
 # A enrichir
 SET(BasicFeatureExtraction_SRCS1
 otbAlignImageToPath.cxx
@@ -1916,6 +1927,7 @@ otbRegionImageToRectangularPathListFilter.cxx
 SET(BasicFeatureExtraction_SRCS15
 otbImageToLineSegmentVectorDataNew.cxx
 otbImageToLineSegmentVectorData.cxx
+otbSqrtSpectralAngleImageFilter.cxx
 )
 
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
