--- a/Testing/Code/Radiometry/CMakeLists.txt
+++ b/Testing/Code/Radiometry/CMakeLists.txt
@@ -940,6 +940,19 @@ ADD_TEST(raTvNDWI_WaterIndexImageFilter ${RADIOMETRY_TESTS8}
 
 
 
+# -------            WaterSqrtSpectralAngleImageFilter (Ossman)------------------------------
+ADD_TEST(raTvWaterSqrtSpectralAngleImageFilter ${RADIOMETRY_TESTS8}
+ --compare-image ${EPSILON}   ${BASELINE}/raWater_SqrtSpectralAngle.tif
+                   ${TEMP}/raWater_SqrtSpectralAngle.tif
+        otbWaterSqrtSpectralAngleImageFilter
+        ${INPUTDATA}/qb_RoadExtract2sub200x200.tif
+        ${TEMP}/raWater_SqrtSpectralAngle.tif
+        0 1 2 3
+)
+
+
+
+
 
 
 # A enrichir
@@ -1018,6 +1031,7 @@ otbISURAndNIRIndexImageFilter.cxx
 otbISUMultiChannelRAndNIRIndexImageFilter.cxx
 otbNDWIMultiChannelWaterIndexImageFilter.cxx
 otbNDWIWaterIndexImageFilter.cxx
+otbWaterSqrtSpectralAngleImageFilter.cxx
 )
 
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
