TEST: add test for the AmplitudeFunctor

--- a/Testing/Code/Visualization/CMakeLists.txt
+++ b/Testing/Code/Visualization/CMakeLists.txt
@@ -11,8 +11,7 @@ SET(TEMP ${OTBTesting_BINARY_DIR}/Temporary)
 
 
 # Tolerances
-SET(TOL 0.0)
-SET(EPSILON 0.000001)
+SET(NOTOL 0.0)
 
 # Test programs
 SET(VISUREFAC_TESTS1 ${CXX_TEST_PATH}/otbVisualizationTests1)
@@ -58,7 +57,7 @@ otbImageLayerNew
 )
 
 ADD_TEST(vrTvImageLayerScalar ${VISUREFAC_TESTS1}
---compare-n-images ${TOL} 3
+--compare-n-images ${NOTOL} 3
 ${BASELINE}/vrTvImageLayerScalarQuicklookOutput.png
 ${TEMP}/vrTvImageLayerScalarQuicklookOutput.png
 ${BASELINE}/vrTvImageLayerScalarExtractOutput.png
@@ -74,7 +73,7 @@ ${TEMP}/vrTvImageLayerScalarScaledExtractOutput.png
 )
 
 ADD_TEST(vrTvImageLayerVector ${VISUREFAC_TESTS1}
---compare-n-images ${TOL} 3
+--compare-n-images ${NOTOL} 3
 ${BASELINE}/vrTvImageLayerVectorQuicklookOutput.png
 ${TEMP}/vrTvImageLayerVectorQuicklookOutput.png
 ${BASELINE}/vrTvImageLayerVectorExtractOutput.png
@@ -102,7 +101,7 @@ otbRenderingImageFilterNew
 )
 
 ADD_TEST(vrTvRenderingImageFilterScalar ${VISUREFAC_TESTS1}
---compare-image ${TOL}
+--compare-image ${NOTOL}
 ${BASELINE}/vrTvRenderingImageFilterScalarOutput.png
 ${TEMP}/vrTvRenderingImageFilterScalarOutput.png
 otbRenderingImageFilterScalar
@@ -112,7 +111,7 @@ ${TEMP}/vrTvRenderingImageFilterScalarOutput.png
 )
 
 ADD_TEST(vrTvRenderingImageFilterVector ${VISUREFAC_TESTS1}
---compare-image ${TOL}
+--compare-image ${NOTOL}
 ${BASELINE}/vrTvRenderingImageFilterVectorOutput.png
 ${TEMP}/vrTvRenderingImageFilterVectorOutput.png
 otbRenderingImageFilterVector
@@ -125,7 +124,7 @@ ${TEMP}/vrTvRenderingImageFilterVectorOutput.png
 )
 
 ADD_TEST(vrTvRenderingImageFilterVectorWithExpNegativeTransfer ${VISUREFAC_TESTS1}
---compare-image ${TOL}
+--compare-image ${NOTOL}
 ${BASELINE}/vrTvRenderingImageFilterVectorWithExpNegativeTransferOutput.png
 ${TEMP}/vrTvRenderingImageFilterVectorWithExpNegativeTransferOutput.png
 otbRenderingImageFilterVectorWithExpNegativeTransfer
@@ -137,6 +136,18 @@ ${TEMP}/vrTvRenderingImageFilterVectorWithExpNegativeTransferOutput.png
 100 600 #min max
 200 700 #min max
 )
+
+ADD_TEST(vrTvRenderingImageFilterAmplitude ${VISUREFAC_TESTS1}
+--compare-image ${NOTOL}
+${BASELINE}/vrTvRenderingImageFilterAmplitudeOutput.png
+${TEMP}/vrTvRenderingImageFilterAmplitudeOutput.png
+otbRenderingImageFilterAmplitude
+${INPUTDATA}/QB_Toulouse_Ortho_XS.tif
+${TEMP}/vrTvRenderingImageFilterAmplitudeOutput.png
+0 1 #channel to use to compute module
+50 800
+)
+
 
 #------------ otb::UniformAlphaBlendingFunction ------------
 
@@ -176,7 +187,7 @@ otbImageLayerRenderingModelNew
 )
 
 ADD_TEST(vrTvImageLayerRenderingModelSingleLayer ${VISUREFAC_TESTS1}
---compare-n-images ${TOL} 3
+--compare-n-images ${NOTOL} 3
 ${BASELINE}/vrTvImageLayerRenderingModelSingleLayerQuicklookOutput.png
 ${TEMP}/vrTvImageLayerRenderingModelSingleLayerQuicklookOutput.png
 ${BASELINE}/vrTvImageLayerRenderingModelSingleLayerExtractOutput.png
@@ -339,6 +350,7 @@ otbImageLayerGeneratorScalar.cxx
 otbImageLayerGeneratorVector.cxx
 otbMultiplyBlendingFunctionNew.cxx
 otbRenderingImageFilterVectorWithExpNegativeTransfer.cxx
+otbRenderingImageFilterAmplitude.cxx
 otbImageViewNew.cxx
 otbImageViewerEndToEndSingleLayer.cxx
 otbImageViewerEndToEndSingleLayerWithSelectAreaHandler.cxx
