--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -1497,6 +1497,20 @@ ADD_TEST(bfTvChangeLabelImageFilter ${BASICFILTERS_TESTS12}
   255   # upper  threshold
 )
 
+# ----- otbSubsampleImageFilter --------------------------------------
+ADD_TEST(bfTuSubsampleImageFilterNew ${BASICFILTERS_TESTS12}
+	otbSubsampleImageFilterNew)
+
+ADD_TEST(bfTvSubsampleImageFilter ${BASICFILTERS_TESTS12}
+	--compare-image ${NOTOL}
+		${TEMP}/bfSubsampleImageFilterOversampled.tif
+		${TEMP}/bfSubsampleImageFilterOnePixelOutOf2.tif
+	otbSubsampleImageFilter
+		${INPUTDATA}/ROI_IKO_PAN_LesHalles.tif
+		${TEMP}/bfSubsampleImageFilterOversampled.tif
+		${TEMP}/bfSubsampleImageFilterOnePixelOutOf2.tif
+)
+
 
 
 # A enrichir
@@ -1695,6 +1709,8 @@ otbEdgeDetectorImageFilter.cxx
 otbEdgeDetectorImageFilterNew.cxx
 otbChangeLabelImageFilterNew.cxx
 otbChangeLabelImageFilter.cxx
+otbSubsampleImageFilterNew.cxx
+otbSubsampleImageFilter.cxx
 )
 
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
