ENH : add printableImageFilter + test

--- a/Testing/Code/BasicFilters/CMakeLists.txt
+++ b/Testing/Code/BasicFilters/CMakeLists.txt
@@ -514,7 +514,17 @@ ADD_TEST(bfTvPrintableImageFilter ${BASICFILTERS_TESTS5}
 		${TEMP}/bfTvPrintableImageFilter.png
 		)
 
-
+ADD_TEST(bfTvPrintableImageFilterWithMask ${BASICFILTERS_TESTS5}
+     --compare-image ${NOTOL}
+     		     ${BASELINE}/bfTvPrintableImageFilterWithMask.png
+		     ${TEMP}/bfTvPrintableImageFilterWithMask.png
+         otbPrintableImageFilterWithMask
+		${INPUTDATA}/poupees.tif
+		${INPUTDATA}/carre.png
+		${TEMP}/bfTvPrintableImageFilterWithMask.png
+		0 # background
+		255 # foreground
+		)
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ otbBasicFiltersTests6 ~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -1570,6 +1580,7 @@ otbUnaryImageFunctorWithVectorImageFilterNew.cxx
 otbUnaryImageFunctorWithVectorImageFilter.cxx
 otbPrintableImageFilterNew.cxx
 otbPrintableImageFilter.cxx
+otbPrintableImageFilterWithMask.cxx
 )
 
 # A enrichir
