--- a/Code/Projections/CMakeLists.txt
+++ b/Code/Projections/CMakeLists.txt
@@ -1,10 +1,14 @@
 FILE(GLOB OTBProjections_SRCS "*.cxx" )
 
+IF( NOT OTB_USE_CURL )
+    LIST(REMOVE_ITEM OTBProjections_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/otbCoordinateToName.cxx" )
+ENDIF( NOT OTB_USE_CURL )
+
 ADD_LIBRARY(OTBProjections ${OTBProjections_SRCS})
 # TARGET_LINK_LIBRARIES(OTBProjections OTBIO otbossimplugins)
 TARGET_LINK_LIBRARIES(OTBProjections OTBIO)
 IF( OTB_USE_CURL )
-    TARGET_LINK_LIBRARIES (OTBProjections ${CURL_LIBRARY})
+    TARGET_LINK_LIBRARIES (OTBProjections ${CURL_LIBRARY} tinyXML)
 ENDIF( OTB_USE_CURL )
 IF(OTB_LIBRARY_PROPERTIES)
   SET_TARGET_PROPERTIES(OTBProjections PROPERTIES ${OTB_LIBRARY_PROPERTIES})
