--- a/Utilities/otb6S/CMakeLists.txt
+++ b/Utilities/otb6S/CMakeLists.txt
@@ -142,7 +142,12 @@ IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
   INSTALL(FILES ${__files1}
     DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otb6S
     COMPONENT Development)
+  FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}//6SV1.0B/*.h")
+  INSTALL(FILES ${__files2}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otb6S/6SV1.0B
+    COMPONENT Development)
 ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+
 
 ENDIF(NOT OTB_DISABLE_UTILITIES_COMPILATION)
 
