--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -14,8 +14,7 @@ ENDIF( NOT OTB_USE_PQXX )
 ADD_LIBRARY(OTBCommon ${OTBCommon_SRCS})
 TARGET_LINK_LIBRARIES (OTBCommon ITKAlgorithms ITKStatistics ITKCommon)
 IF (OTB_USE_MAPNIK)
-#TODO this line should be refined when we will like to have this capability with windows
-    TARGET_LINK_LIBRARIES(OTBCommon ${MAPNIK_LIBRARY}/libmapnik.so)
+    TARGET_LINK_LIBRARIES(OTBCommon ${MAPNIK_LIBRARY})
 ENDIF(OTB_USE_MAPNIK)
 IF (OTB_USE_PQXX)
 #TODO this line should be refined when we will like to have this capability with windows
